--- a/docs/style.css
+++ b/docs/style.css
@@ -51,7 +51,7 @@ body{
     top: 40px;
     left: 10px;
     border-radius: 10px;
-  
+    padding: 5px;
 }
 
 .notebook-name{
@@ -63,7 +63,7 @@ body{
     display: none;
     width: 300px;
     height: 300px;
-    position: absolute;
+    position: fixed;
     top: calc(50vh - 50px);
     left: calc(50vw - 150px);
     border: 0px;
